@@ -89,26 +89,26 @@
       <listitem><para>C: max core file size (KB)</para></listitem>
       <listitem><para>D: max data size (KB)</para></listitem>
       <listitem><para>F: maximum filesize (KB)</para></listitem>
-      <listitem><para>M: max locked-in-memory address space (KB)</para></listitem>
-      <listitem><para>N: max number of open files</para></listitem>
-      <listitem><para>R: max resident set size (KB)</para></listitem>
-      <listitem><para>S: max stack size (KB)</para></listitem>
-      <listitem><para>T: max CPU time (MIN)</para></listitem>
-      <listitem><para>U: max number of processes</para></listitem>
       <listitem><para>K: file creation mask, set by
 	<citerefentry>
 	  <refentrytitle>umask</refentrytitle><manvolnum>2</manvolnum>
 	</citerefentry>.</para>
       </listitem>
+      <listitem><para>I: max nice value (0..39 which translates to
+      20..-19)</para></listitem>
       <listitem><para>L: max number of logins for this user</para></listitem>
+      <listitem><para>M: max locked-in-memory address space (KB)</para></listitem>
+      <listitem><para>N: max number of open files</para></listitem>
+      <listitem><para>O: max real time priority</para></listitem>
       <listitem><para>P: process priority, set by
 	<citerefentry>
 	  <refentrytitle>setpriority</refentrytitle><manvolnum>2</manvolnum>
 	</citerefentry>.</para>
       </listitem>
-      <listitem><para>I: max nice value (0..39 which translates to
-      20..-19)</para></listitem>
-      <listitem><para>O: max real time priority</para></listitem>
+      <listitem><para>R: max resident set size (KB)</para></listitem>
+      <listitem><para>S: max stack size (KB)</para></listitem>
+      <listitem><para>T: max CPU time (MIN)</para></listitem>
+      <listitem><para>U: max number of processes</para></listitem>
     </itemizedlist>
 
     <para>
