@@ -1,5 +1,11 @@
 2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* man/limits.5.xml, libmisc/limits.c: Sort limit identifiers.
+	* libmisc/limits.c: Fix support for the K limit identifier.
+	* libmisc/limits.c: Add missing default limit for L and U.
+
+2011-10-31  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/pwck.c, man/pwck.8.xml: Add support for long options.
 	* src/pwck.c, man/pwck.8.xml: Add -h/--help option
 	* src/grpck.c, man/grpck.8.xml: Add support for long options.
